--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
         <a href="#skills">Skills</a>
     </div>
 
-    <h1>Portfolio</h1>
+    <!-- <h1>Portfolio</h1> -->
     <div id="profile">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-3">
                 <img class="profile" src="./images/my-pic.jpg" alt="profile photo">
             </div>
-            <div class="col-sm-6">
-                <p><em>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium incidunt eligendi est commodi debitis ea veritatis quos, impedit porro vero quas quis fugiat tenetur beatae possimus nostrum quo sint?
+            <div class="col-sm-9 about-me">
+                <p><em>                    
+                    I am a Software engineer with an overall experience of 1.5 year.
+                    Currently I am working as a Software engineer responsible for integrating/designing API's and resources like databases, files, web services and applications.
                 </em></p>
+                <p>
+                    (This page is to be updated.Don't consider this as my final portolio. I have more skills and done more projects.I promise!!)
+                </p>
             </div>
         </div>
     </div>
