--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#profile">About Me :)</a>
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
+        <a href="#contact">Contact me</a>
     </div>
 
     <!-- <h1>Portfolio</h1> -->
@@ -26,7 +27,7 @@
             <div class="col-sm-9 about-me">
                 <p><em>                    
                     I am a Software engineer with an overall experience of 1.5 year.
-                    Currently I am working as a Software engineer responsible for integrating/designing API's and resources like databases, files, web services and applications.
+                    Currently I am working as a Software engineer responsible for designing APIs and integrating resources like databases, files, web services and applications.
                 </em></p>
                 <p>
                     (This page is to be updated.Don't consider this as my final portolio. I have more skills and done more projects.I promise!!)
@@ -125,6 +126,30 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="contact">
+        <h2>Contact me :)</h2>
+        <div>
+            <form action="">
+                <div class="input row">
+                    <label class="col-sm-1" for="name">Name</label>
+                    <input class="col-sm-2" type="text" name="name" id="name">
+                </div>
+                <div class="input row">
+                    <label class="col-sm-1" for="email">Email</label>
+                    <input class="col-sm-2" type="email" name="email" id="email">
+                </div>
+                <div class="input row">
+                    <label class="col-sm-1" for="number">Phone</label>
+                    <input class="col-sm-2" type="text" name="number" id="number">
+                </div>
+                <div class="input row">
+                    <input class="col-lg-3" type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row colour6" id="footer">
     </div>
 </body>
 </html>
